--- a/XYZReader/build.gradle
+++ b/XYZReader/build.gradle
@@ -31,13 +31,14 @@ android {
 }
 
 dependencies {
+    androidSupportVersion = "28.0.0"
     implementation "com.android.support:support-v4:$androidSupportVersion"
     implementation "com.android.support:support-v13:$androidSupportVersion"
     implementation "com.android.support:appcompat-v7:$androidSupportVersion"
     implementation "com.android.support:palette-v7:$androidSupportVersion"
     implementation "com.android.support:recyclerview-v7:$androidSupportVersion"
     implementation "com.android.support:cardview-v7:$androidSupportVersion"
-    implementation 'com.android.support:design:24.0.0'
+    implementation 'com.android.support:design:28.0.0'
     implementation 'com.squareup.okhttp3:okhttp:3.1.2'
     implementation files('libs/volley.jar')
 }
